fix spaceship alignment

--- a/src/styles/spaceship.scss
+++ b/src/styles/spaceship.scss
@@ -14,7 +14,7 @@
   }
 }
 
-@container (min-width: 860px) {
+@container (min-width: 947px) {
   .spaceship {
     opacity: 1;
     width: 400px;
@@ -25,7 +25,7 @@
   }
 }
 
-@container (min-width: 950px) {
+@container (min-width: 1040px) {
   .spaceship {
     width: 500px;
     top: 90px;
